--- a/CarShop/Areas/Customer/Views/Home/Index.cshtml
+++ b/CarShop/Areas/Customer/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<link rel="stylesheet" href="~/css/site.css" />
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container_all">
+    <div class="hero">
+        <div class="left">
+            <div class="center">
+                <span >Our collection</span>
+                <p>Buy our collection of car</p>
+                <button>Shop now</button>
+            </div>
+        </div>
+        <div class="right">
+            <div class="image">
+                
+            </div>
+        </div>
+    </div>
 </div>
