--- a/CarShop/Views/Shared/_Layout.cshtml
+++ b/CarShop/Views/Shared/_Layout.cshtml
@@ -49,8 +49,19 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+
+
+
+
+
+
+
+
+
+
+
+    <div class="theContain">
+        <main role="main" >
             @RenderBody()
         </main>
     </div>
