--- a/CarShop/wwwroot/css/site.css
+++ b/CarShop/wwwroot/css/site.css
@@ -70,3 +70,24 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+
+/* Style of our application */
+
+.container_all{
+    background:red;
+    width:100%;
+    height:100vh;
+
+    
+}
+
+    .container_all .hero {
+        /*max-width:1550px;*/
+
+        width: 100%;
+        height: 100%;
+        background: blue;
+        display: flex;
+        justify-content: center;
+        align-content: center
+    }
